--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ dd {
 }
 
 .about__inner {
-  max-width: 1100px;
+  max-width: 1000px;
   width: 100%;
   margin: 0 auto;
   padding: 40px 0;
@@ -185,7 +185,6 @@ dd {
 
 .card__main{
   display: flex;
-  
 }
 
 .service__main {
@@ -242,18 +241,6 @@ dd {
   color: #ffffff;
 }
 
-.blog__ttl {
-  font-size: 15px;
-  font-family: 'Indie Flower', cursive;
-  color: #C71585;
-  margin-bottom: 10px;
-}
-
-.blog__content {
-  font-size: 20px;
-  color: #696969;
-}
-
 .blog {
   background: #C0C0C0;
   padding-bottom: 50px;
@@ -261,13 +248,33 @@ dd {
 }
 
 .blog__inner {
+  position: relative;
   padding: 20px 0;
+}
+
+.blog__ttl {
+  position: absolute;
+  left: 7%;
+  font-size: 15px;
+  font-family: 'Indie Flower', cursive;
+  color: #C71585;
+  margin-bottom: 10px;
+}
+
+.blog__content {
+  position: relative;
+  left: 7%;
+  padding: 30px 0 0;
+  font-size: 20px;
+  color: #696969;
 }
 
 .blog__item {
   display: flex;
   justify-content: space-around;
-  padding: 30px 0;
+  width: 90%;
+  margin: 0 auto;
+  padding: 0 0 30px;
 }
 
 .blog__card {
@@ -279,6 +286,7 @@ dd {
 
 .card__img img {
   width: 100%;
+  border-radius: 20px 20px 0 0;
 }
 
 .card__content {
@@ -299,7 +307,10 @@ dd {
   left: 0;
   display: inline-block;
   color: #ffffff;
-  font-size: 14px;
+  font-size: 15px;
+  text-align: center;
+  padding: 10px 20px;
+  border-radius: 20px 0 0 0;
 }
 
 .tag {
@@ -372,6 +383,7 @@ table th {
 }
 
 .pic__item {
+  position: relative;
   display: block;
   display: flex;
   margin-bottom: 100px;
@@ -384,8 +396,11 @@ table th {
 }
 
 .pic__recruit {
+  position: absolute;
+  top: 45%;
+  left: 20%;
   color: #ffffff;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: bold;
   display: flex;
   justify-content: center;
@@ -393,8 +408,11 @@ table th {
 }
 
 .pic__interview {
+  position: absolute;
+  top: 45%;
+  left: 60%;
   color: #ffffff;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: bold;
   display: flex;
   justify-content: center;
