--- a/css/style.css
+++ b/css/style.css
@@ -249,11 +249,12 @@ dd {
 
 .blog__inner {
   position: relative;
-  padding: 20px 0;
+  padding: 60px 0;
 }
 
 .blog__ttl {
   position: absolute;
+  top: 30%;
   left: 7%;
   font-size: 15px;
   font-family: 'Indie Flower', cursive;
@@ -262,7 +263,8 @@ dd {
 }
 
 .blog__content {
-  position: relative;
+  position: absolute;
+  top: 30%;
   left: 7%;
   padding: 30px 0 0;
   font-size: 20px;
@@ -274,7 +276,7 @@ dd {
   justify-content: space-around;
   width: 90%;
   margin: 0 auto;
-  padding: 0 0 30px;
+  padding: 0 0 20px;
 }
 
 .blog__card {
